--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 <mat-card>
   <figure>
     <span class="sidenote">Image by <a href="https://pixabay.com/users/franzroos_fotomacher-1782794/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=4459530">Franz Roos</a> from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=4459530">Pixabay</a></span>
-    <img src="/assets/images/home.jpg" width="256px"/>
+    <img src="./assets/images/home.jpg" width="256px"/>
   </figure>
   <mat-card-content>
 <p>
